use perusio nginx-with-drupal conf at github; update all sites conf.
need to work out the proxy_cache directive!  Maybe need to upgrade to latest nginx to figure other errors.

i commented out a lot of directives!  Do enable them one by one to test

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,9 @@
 # -*- mode: nginx; mode: flyspell-prog; mode: autopair; ispell-local-dictionary: "american" -*-
 user www-data;
-worker_processes  4;
+worker_processes  2;
 
-error_log  /var/log/nginx/error.log;
-pid        /var/run/nginx.pid;
+error_log  /usr/local/nginx//logs/error.log;
+pid        /usr/local/nginx/logs/nginx.pid;
 
 worker_rlimit_nofile 8192;
 
@@ -18,22 +18,22 @@ events {
 
 http {
     ## MIME types.
-    include     /etc/nginx/mime.types;
+    include     /usr/local/nginx/conf/mime.types;
     default_type  application/octet-stream;
 
     ## FastCGI.
-    include     /etc/nginx/fastcgi.conf;
+    include     /usr/local/nginx/conf/fastcgi.conf;
 
     ## Default log and error files.
-    access_log  /var/log/nginx/access.log;
-    error_log   /var/log/nginx/error.log;
+    access_log  /usr/local/nginx/logs/access.log;
+    error_log   /usr/local/nginx/logs/error.log;
 
     ## Use sendfile() syscall to speed up I/O operations and speed up
     ## static file serving.
     sendfile        on;
     ## Handling of IPs in proxied and load balancing situations.
-    set_real_ip_from        0.0.0.0/32; # all addresses get a real IP.
-    real_ip_header     X-Forwarded-For; # the ip is forwarded from the load balancer/proxy
+    #set_real_ip_from        0.0.0.0/32; # all addresses get a real IP.
+    #real_ip_header     X-Forwarded-For; # the ip is forwarded from the load balancer/proxy
 
     ## Define a zone for limiting the number of simultaneous
     ## connections nginx accepts. 1m means 3200 simultaneous
@@ -51,7 +51,7 @@ http {
     reset_timedout_connection on;
     
     ## Body size.
-    client_max_body_size 10m;
+    client_max_body_size 100m;
 
     ## TCP options.
     tcp_nodelay        on;
@@ -72,7 +72,7 @@ http {
 
     ## Serve already compressed files directly, bypassing on-the-fly
     ## compression.
-    gzip_static on;
+    #gzip_static on;
 
     ## Hide the Nginx version number.
     server_tokens off;
@@ -81,12 +81,12 @@ http {
     ## here (in this context, for session resumption to work. See this
     ## thread on the Nginx mailing list:
     ## http://nginx.org/pipermail/nginx/2010-November/023736.html.
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
+    #ssl_session_cache shared:SSL:10m;
+    #ssl_session_timeout 10m;
     
     ## For the filefield_nginx_progress module to work. From the
     ## README. Reserve 1MB under the name 'uploads' to track uploads.
-    upload_progress uploads 1m;
+    #upload_progress uploads 1m;
 
     ## Enable clickjacking protection in modern browsers. Available in
     ## IE8 also. See
@@ -98,9 +98,16 @@ http {
 
     ## Include the upstream servers for Apache handling the PHP
     ## processes. In this case Nginx functions as a reverse proxy.
-    #include reverse_proxy.conf;
-    #include upstream_phpapache.conf;
+    include reverse_proxy.conf;
+    include upstream_phpapache.conf;
     
     ## Include all vhosts. 
-    include /etc/nginx/sites-enabled/*;
+    include /usr/local/nginx/conf/sites-available/*/*;
+
+
+    # web catch, proxy catch
+    #proxy_temp_path /usr/local/nginx/proxy_temp;
+    #proxy_cache_path  /usr/local/nginx/proxy_cache levels=1:2 keys_zone=cache:300m inactive=1d max_size=1g;
+
 }
+
