--- a/sites-available/drupal_boost_drush.conf
+++ b/sites-available/drupal_boost_drush.conf
@@ -63,7 +63,7 @@ location = /index.php {
     # Filefield Upload progress
     # http://drupal.org/project/filefield_nginx_progress support
     # through the NgninxUploadProgress modules.
-    track_uploads uploads 60s;
+    #track_uploads uploads 60s;
 }
 
 ## Boost stats.
