--- a/upstream_phpapache.conf
+++ b/upstream_phpapache.conf
@@ -3,6 +3,6 @@
 ### Upstream configuration for Apache functioning has a PHP handler.
 
 ## Add as many servers as needed. Cf. http://wiki.nginx.org/HttpUpstreamModule.
-upstream phpapache {
+upstream apache {
     server 127.0.0.1:8080;
 }
