--- a/upstream_phpcgi.conf
+++ b/upstream_phpcgi.conf
@@ -4,5 +4,5 @@
 
 ## Add as many servers as needed. Cf. http://wiki.nginx.org/HttpUpstreamModule.
 upstream phpcgi {
-    server unix:/tmp/php-cgi/php-cgi.socket;
+    server 127.0.0.1:9000;
 }
