check in site ncec, edit drupal7.conf and drupal_boost.conf

--- a/sites-available/drupal_boost.conf
+++ b/sites-available/drupal_boost.conf
@@ -51,7 +51,7 @@ location = /index.php {
     # Filefield Upload progress
     # http://drupal.org/project/filefield_nginx_progress support
     # through the NgninxUploadProgress modules.
-    track_uploads uploads 60s;
+    #track_uploads uploads 60s;
 }
 
 ## Boost stats.
@@ -87,7 +87,7 @@ location = /cron.php {
 ## All install, update and related pages are protected via Basic HTTPAuth.
 location = /install.php {
     auth_basic "Restricted Access"; # auth realm                          
-    auth_basic_user_file .htpasswd-users; # htpasswd file
+    auth_basic_user_file passwd; # htpasswd file
     fastcgi_pass phpcgi;
     # To use Apache for serving PHP uncomment the line bellow and
     # comment out the above.
@@ -96,7 +96,7 @@ location = /install.php {
 
 location = /update.php {
     auth_basic "Restricted Access"; # auth realm                          
-    auth_basic_user_file .htpasswd-users; # htpasswd file
+    auth_basic_user_file passwd; # htpasswd file
     fastcgi_pass phpcgi;
     # To use Apache for serving PHP uncomment the line bellow and
     # comment out the above.
