只允许办公室几台机器和服务器本地访问cron.php install.php update.php

--- a/sites-available/drupal7.conf
+++ b/sites-available/drupal7.conf
@@ -41,7 +41,20 @@ location ~* ^.+(\.(?:htaccess|txt|engine|inc|info|install|module|profile|po|sh|.
 ## https://drupal.org/node/371374.
 location ~* files/styles {
     access_log off;            
-    expires 30d;
+    #expires 30d;
+    try_files $uri @drupal;
+}
+
+## 尝试一下对于files目录下的公开文件，根本不给用户cookie
+## 这样方便让nginx或varnish直接缓存这些文件
+location ~* files/ {
+    proxy_pass_header off;
+    proxy_hide_header Set-Cookie;
+    proxy_ignore_headers Set-Cookie;
+    proxy_cache cache;
+    proxy_cache_key $host$uri#is_args$args;
+    access_log off;            
+    #expires 30d;
     try_files $uri @drupal;
 }
 
@@ -74,7 +87,12 @@ location = /favicon.ico {
 ## All static files will be served directly.
 location ~* ^.+\.(?:css|js|jpg|jpeg|gif|ico|png|html|xml)$ {
     access_log        off;
-    expires           30d;
+    #expires           30d;
+    proxy_pass_header off;
+    proxy_hide_header Set-Cookie;
+    proxy_ignore_headers Set-Cookie;
+    proxy_cache cache;
+    proxy_cache_key $host$uri#is_args$args;
 }
 
 ## Keep a tab on the "big" static files.
