proxy_cache必须在vhosts之前被include，否则出现下面的报错

--- a/nginx.conf
+++ b/nginx.conf
@@ -91,7 +91,7 @@ http {
     ## Enable clickjacking protection in modern browsers. Available in
     ## IE8 also. See
     ## https://developer.mozilla.org/en/The_X-FRAME-OPTIONS_response_header
-    add_header X-Frame-Options sameorigin;
+    #add_header X-Frame-Options sameorigin;
 
     ## Include the upstream servers for PHP FastCGI handling config.
     include upstream_phpcgi.conf;
@@ -101,13 +101,17 @@ http {
     include reverse_proxy.conf;
     include upstream_phpapache.conf;
     
-    ## Include all vhosts. 
-    include /usr/local/nginx/conf/sites-available/*/*;
 
-
+    # proxy_cache必须在vhosts之前被include，否则出现下面的报错
     # web catch, proxy catch
-    #proxy_temp_path /usr/local/nginx/proxy_temp;
-    #proxy_cache_path  /usr/local/nginx/proxy_cache levels=1:2 keys_zone=cache:300m inactive=1d max_size=1g;
+    # sudo /usr/local/nginx/sbin/nginx -t
+    # nginx: [emerg]: the size 314572800 of shared memory zone "cache" conflicts with already declared size 0 in /usr/local/nginx/conf/nginx.conf:110
+    # 参阅： http://forum.nginx.org/read.php?2,9716,9847
+    # igor said: This may be caused if "proxy_cache media" is included before proxy_cache_path.
 
+    proxy_temp_path   /usr/local/nginx/proxy_temp;
+    proxy_cache_path  /usr/local/nginx/proxy_cache levels=1:2 keys_zone=cache:300m inactive=1d max_size=1g;
+
+    ## Include all vhosts. 
+    include /usr/local/nginx/conf/sites-available/*/*.conf;
 }
-
