增加了dhg csc fltrp 和ccec站点

--- a/sites-available/vhosts/dhg.conf
+++ b/sites-available/vhosts/dhg.conf
@@ -5,7 +5,7 @@
 ## HTTP server.
 server {
     listen 80;
-    server_name ncec.2u4u.com.cn;
+    server_name dhg.2u4u.com.cn;
     #limit_conn arbeit 16;
 
     ## Access and error logs.
