仅允许办公室和服务器本地访问update.php install.php cron.php

--- a/sites-available/drupal_boost.conf
+++ b/sites-available/drupal_boost.conf
@@ -74,7 +74,9 @@ location = /xmlrpc.php {
 ## Restrict cron access to a specific host.
 location = /cron.php {
     allow 127.0.0.1;
-    allow 192.168.1.0/24;
+    allow 192.168.12.199;
+    allow 192.168.12.89;
+    allow 192.168.12.88;
     fastcgi_pass phpcgi;
     # To use Apache for serving PHP uncomment the line bellow and
     # comment out the above.
@@ -83,24 +85,44 @@ location = /cron.php {
     deny all;
 }
 
-
 ## All install, update and related pages are protected via Basic HTTPAuth.
+
 location = /install.php {
-    auth_basic "Restricted Access"; # auth realm                          
-    auth_basic_user_file passwd; # htpasswd file
+    # 注释掉auth_basic 否则运行install.php出现500 internal error
+    #auth_basic "Restricted Access"; # auth realm                          
+    #auth_basic_user_file passwd; # htpasswd file
+    # 只允许社内ip地址访问
+    allow 192.168.12.199;
+    allow 192.168.12.89;
+    allow 192.168.12.88;
+    allow 127.0.0.1;
+    # 给php处理p
     fastcgi_pass phpcgi;
     # To use Apache for serving PHP uncomment the line bellow and
     # comment out the above.
     #proxy_pass http://phpapache;
+    error_page 403 =404;
+    deny all;
 }
 
 location = /update.php {
-    auth_basic "Restricted Access"; # auth realm                          
-    auth_basic_user_file passwd; # htpasswd file
+    # 注释掉auth_basic 否则运行install.php出现500 internal error
+    #auth_basic "Restricted Access"; # auth realm                          
+    #auth_basic_user_file passwd; # htpasswd file
+    # 只允许社内ip地址访问
+    allow 192.168.12.199;
+    allow 192.168.12.89;
+    allow 192.168.12.88;
+    allow 127.0.0.1;
+    # 给php处理p
     fastcgi_pass phpcgi;
     # To use Apache for serving PHP uncomment the line bellow and
     # comment out the above.
     #proxy_pass http://phpapache;
+    error_page 403 =404;
+    deny all;
+    
+
 }
 
 
