调整了存储log的规则。关闭access.log，最简化记录errror.log。参考： nginx wiki中logs相关
log占用了太大空间。

只是注释掉access.log不管用，需要关闭

	access.log off

只是指数掉error.log，不管用，关闭error.log也不管用

        error.log off 是不对的。这会告诉nginx把error文档写到名字是off的文件中

正确的方法是

       error.log /dev/null crit;

我现在用

      error.log /usr/local/nginx/logs/error.log crit;

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,10 +2,13 @@
 user www-data;
 worker_processes  2;
 
-error_log  /usr/local/nginx//logs/error.log;
+# bxy: set error_log to crit to minimize log file size
+error_log  /usr/local/nginx//logs/error.log crit;
 pid        /usr/local/nginx/logs/nginx.pid;
 
 worker_rlimit_nofile 8192;
+
+
 
 events {
     worker_connections  4096;
@@ -25,8 +28,12 @@ http {
     include     /usr/local/nginx/conf/fastcgi.conf;
 
     ## Default log and error files.
-    access_log  /usr/local/nginx/logs/access.log;
-    error_log   /usr/local/nginx/logs/error.log;
+    #access_log  /usr/local/nginx/logs/access.log;
+    # bxy: see ref: http://wiki.nginx.org/NginxHttpLogModule#access_log
+    access_log off; 
+    #error_log   /usr/local/nginx/logs/error.log;
+    # bxy: see ref: http://wiki.nginx.org/NginxCoreModule#error_log 
+    error_log   /usr/local/nginx/logs/error.log crit;
 
     ## Use sendfile() syscall to speed up I/O operations and speed up
     ## static file serving.
@@ -54,7 +61,9 @@ http {
     client_max_body_size 100m;
 
     ## TCP options.
-    tcp_nodelay        on;
+    # Also you can try setting tcp_nodelay to off so that it doesn't bleed updates for static files.
+    # http://groups.drupal.org/node/140084#comment-461659
+    tcp_nodelay        off;
     tcp_nopush         on;
 
     ## Compression.
