注释掉blacklist.conf中的关键词 video， 否则如果你drupal中有field名字包含video，创建该node或者管理该node类型会出错
而且是很严重的错误，因为浏览器送出了refere中含有 video这个关键词，所以被blacklist.conf中的规则禁止了。因此出现该页很多css和js调不出来，导致根本无法使用。

这个问题我提交了issue，但没结果。后来另一个人在他的issue中发现了问题所在。

参考：

http://groups.drupal.org/node/141759
http://groups.drupal.org/node/140084

--- a/sites-available/blacklist.conf
+++ b/sites-available/blacklist.conf
@@ -11,6 +11,6 @@ if ($http_user_agent ~* (HTTrack|HTMLParser|libwww) ) {
 }
 
 # Deny access based on the Referer header.
-if ($http_referer ~* (babes|click|diamond|forsale|girl|jewelry|love|nudit|organic|poker|porn|poweroversoftware|sex|teen|video|webcam|zippo|casino|replica) ) {
+if ($http_referer ~* (babes|click|diamond|forsale|girl|jewelry|love|nudit|organic|poker|porn|poweroversoftware|sex|teen|webcam|zippo|casino|replica) ) {
     return 444;
 }
