--- a/sites-available/vhosts/dushu.2u4u.com.cn.conf
+++ b/sites-available/vhosts/dushu.2u4u.com.cn.conf
@@ -2,7 +2,7 @@
         listen       80;
         server_name  dushu.2u4u.com.cn;
         #access_log  logs/host.access.log  main;
-        root   /home/tufu/xieq/;
+        root   /var/www/xieq/;
         index  index.php index.html index.htm;
 	autoindex on;
         location / {
