--- a/sites-available/drupal7.conf
+++ b/sites-available/drupal7.conf
@@ -47,16 +47,16 @@ location ~* files/styles {
 
 ## 尝试一下对于files目录下的公开文件，根本不给用户cookie
 ## 这样方便让nginx或varnish直接缓存这些文件
-location ~* files/ {
-    proxy_pass_header off;
-    proxy_hide_header Set-Cookie;
-    proxy_ignore_headers Set-Cookie;
-    proxy_cache cache;
-    proxy_cache_key $host$uri#is_args$args;
-    access_log off;            
+#location ~* files/ {
+    #proxy_pass_header off;
+    #proxy_hide_header Set-Cookie;
+    #proxy_ignore_headers Set-Cookie;
+    #proxy_cache cache;
+    #proxy_cache_key $host$uri#is_args$args;
+    #access_log off;            
     #expires 30d;
-    try_files $uri @drupal;
-}
+    #try_files $uri @drupal;
+#}
 
 ## Regular private file serving (i.e. handled by Drupal).
 location ~* /system/files/ {
@@ -88,11 +88,11 @@ location = /favicon.ico {
 location ~* ^.+\.(?:css|js|jpg|jpeg|gif|ico|png|html|xml)$ {
     access_log        off;
     #expires           30d;
-    proxy_pass_header off;
-    proxy_hide_header Set-Cookie;
-    proxy_ignore_headers Set-Cookie;
-    proxy_cache cache;
-    proxy_cache_key $host$uri#is_args$args;
+    #hproxy_pass_header off;
+    #proxy_hide_header Set-Cookie;
+    #proxy_ignore_headers Set-Cookie;
+    #proxy_cache cache;
+    #proxy_cache_key $host$uri#is_args$args;
 }
 
 ## Keep a tab on the "big" static files.
