为了能接受上传的大视频文件，增大了client_max_body_size和client_body_timeout
 ## Timeouts.
-    client_body_timeout             60;
+    # bxy: 用来设置读取客户端请求内容的超时时间，如果超过，nginx将
+    # 返回 request time out http code 408
+    # 为了v.chinadebate.org 等上传视频的站点，我把client_body_timeout
+    # 值设置大一点
+    client_body_timeout             600;

     ## Body size.
-    client_max_body_size 100m;
+    # bxy： 设置允许接受客户端请求内容的最大值，相当于php中post_max upload_max
+    # 之类？？ 为了上传大视频，开大些。
+    client_max_body_size 500m;

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,7 @@ worker_processes  2;
 
 # bxy: set error_log to crit to minimize log file size
 error_log  /usr/local/nginx//logs/error.log crit;
+#error_log  /usr/local/nginx//logs/error.log;
 pid        /usr/local/nginx/logs/nginx.pid;
 
 worker_rlimit_nofile 8192;
@@ -49,7 +50,11 @@ http {
     limit_zone arbeit $binary_remote_addr 1m;
 
     ## Timeouts.
-    client_body_timeout             60;   
+    # bxy: 用来设置读取客户端请求内容的超时时间，如果超过，nginx将
+    # 返回 request time out http code 408
+    # 为了v.chinadebate.org 等上传视频的站点，我把client_body_timeout
+    # 值设置大一点
+    client_body_timeout             600;   
     client_header_timeout           60;
     keepalive_timeout            10 10;
     send_timeout                    60;
@@ -58,7 +63,9 @@ http {
     reset_timedout_connection on;
     
     ## Body size.
-    client_max_body_size 100m;
+    # bxy： 设置允许接受客户端请求内容的最大值，相当于php中post_max upload_max
+    # 之类？？ 为了上传大视频，开大些。
+    client_max_body_size 500m;
 
     ## TCP options.
     # Also you can try setting tcp_nodelay to off so that it doesn't bleed updates for static files.
