删除了include drupal6的那2行，以为不需要了

--- a/sites-available/vhosts/ccec.conf
+++ b/sites-available/vhosts/ccec.conf
@@ -9,11 +9,11 @@ server {
     #limit_conn arbeit 16;
 
     ## Access and error logs.
-    #access_log  /var/log/nginx/example.com_access.log;
-    #error_log   /var/log/nginx/example.com_error.log;
+    #access_log  /var/log/nginx/ccec_access.log;
+    #error_log   /var/log/nginx/ccec_error.log;
 
     ## Include the blacklist.conf file.
-    include sites-available/blacklist.conf;
+    #include sites-available/blacklist.conf;
 
     ## Disable all methods besides HEAD, GET and POST.
     #if ($request_method !~ ^(GET|HEAD|POST)$ ) {
@@ -22,9 +22,6 @@ server {
 
     root  /var/www/d7production/;
     index index.php index.html;
-
-    ## Include all Drupal stuff.
-    #include sites-available/drupal.conf;
 
     ## For D7. Use this instead.
     include sites-available/drupal7.conf;
