增加了新站点

--- a/sites-available/vhosts/dushu.2u4u.com.cn.conf
+++ b/sites-available/vhosts/dushu.2u4u.com.cn.conf
@@ -4,14 +4,23 @@
         #access_log  logs/host.access.log  main;
         root   /var/www/xieq/;
         index  index.php index.html index.htm;
-	autoindex on;
+	#autoindex on;
         location / {
-           proxy_pass       http://apache;
-           proxy_set_header  X-Real-IP  $remote_addr;
-           proxy_set_header Host $http_host;
+           #proxy_pass       http://apache;
+           #proxy_set_header  X-Real-IP  $remote_addr;
+           #proxy_set_header Host $http_host;
+
+
+	   fastcgi_pass  127.0.0.1:9000; 
+       	   fastcgi_index index.php;
+       	   fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+       	   include       fastcgi_params;
+	   # nginx的wiki中没有说明如何header的值有两个并用分号分开如何处理
+	   # 后来经whx尝试，发现用单引号括住后面的值就可以了
+	   #add_header	Content-Type 'text/html; charset=utf-8';
 	}
    
         location ~* .+\.(png|jpg|gif|jpeg|css|js|ico|flv|swf|mp3)$ {
-	expires 10d;
+	expires max;
 	}
   }
