--- a/sites-available/vhosts/mdict.2u4u.com.cn.conf
+++ b/sites-available/vhosts/mdict.2u4u.com.cn.conf
@@ -1,12 +1,14 @@
  server {
         listen       80;
-        server_name  test.2u4u.com.cn;
+        server_name  mdict.2u4u.com.cn;
         #access_log  logs/test.2u4u.com.cn.log  main;
         #access_log  off;
-        root   /var/www/cidian/;
+        root   /var/www/cidian/online;
         index  index.html index.htm online_dict_new.php index.php;
 
 	# bxy 这个值需要增大，因为egs生成试卷总报 504 gateway timeout的错误
+	# 其实这个站点那时候总是超时是数据库的表有问题，分析和优化了数据库表后就不在需要那么长时间
+	# 才能生成试卷了，因此下面的的那些参数应该注释掉
 	# 对于nginx来是说没有在规定时间内从后台读到返回的数据，
 	# 或者也没有在规定时间内把得到的数据返回给用户
 	# 因此调整下面的值
@@ -14,9 +16,9 @@
 	# 参考： http://stackoverflow.com/questions/561946/how-do-i-prevent-a-gateway-timeout-with-nginx
 	# 参考这个篇中文的： http://blog.zhysoft.cn/tag/nginx/
  	
-	proxy_connect_timeout 600s;
-	proxy_send_timeout 600s;
-	proxy_read_timeout 600s; 
+	#proxy_connect_timeout 600s;
+	#proxy_send_timeout 600s;
+	#proxy_read_timeout 600s; 
 
 	# 根据这篇文章，php-cgi的线程不够，也会出现504 gateway timeout
 	# 因此相应加大
