--- a/sites-available/vhosts/vpn38.com.conf
+++ b/sites-available/vhosts/vpn38.com.conf
@@ -1,12 +1,11 @@
     server {
         listen 80;
-        server_name www.vpn38.net vpn38.net;
+        server_name  www.vpn38.com vpn38.com;
 	### redirect www to nowww with client code 301 ###
-        if ($host = 'vpn38.net' ) {
+        if ($host = 'vpn38.com' ) {
          rewrite  ^/(.*)$  http://www.vpn-38.com/$1  permanent;
         }
-        if ($host = 'www.vpn38.net' ) {
+        if ($host = 'www.vpn38.com' ) {
          rewrite  ^/(.*)$  http://www.vpn-38.com/$1  permanent;
         }
-
     }
