--- a/sites-available/drupal_boost.conf
+++ b/sites-available/drupal_boost.conf
@@ -44,10 +44,10 @@ location @cache {
 ## Restrict access to the strictly necessary PHP files. Reducing the
 ## scope for exploits. Handling of PHP code and the Drupal event loop.
 location = /index.php {
-    #fastcgi_pass phpcgi;
+    fastcgi_pass phpcgi;
     # To use Apache for serving PHP uncomment the line bellow and
     # comment out the above.
-    proxy_pass http://apache;
+    #proxy_pass http://apache;
     # Filefield Upload progress
     # http://drupal.org/project/filefield_nginx_progress support
     # through the NgninxUploadProgress modules.
@@ -77,10 +77,10 @@ location = /cron.php {
     #allow 192.168.12.199;
     #allow 192.168.12.89;
     #allow 192.168.12.88;
-    #fastcgi_pass phpcgi;
+    fastcgi_pass phpcgi;
     # To use Apache for serving PHP uncomment the line bellow and
     # comment out the above.
-    proxy_pass http://apache;
+    #proxy_pass http://apache;
     error_page 403 =404;
     #deny all;
 }
