重新组织了目录结构，并合并了d7站点配置文件

--- a/nginx.conf
+++ b/nginx.conf
@@ -130,4 +130,5 @@ http {
 
     ## Include all vhosts. 
     include /usr/local/nginx/conf/sites-available/*/*.conf;
+    include /usr/local/nginx/conf/sites-available/vhosts/others/*.conf;
 }
