--- a/sites-available/vhosts/web.proxy.conf
+++ b/sites-available/vhosts/web.proxy.conf
@@ -1,7 +1,7 @@
 server 	{
 	listen 12345;
 	location / {
-	resolver 8.8.8.8;
+	#resolver 8.8.8.8;
 	# 404: don't use http:// , or https won't be proxied
 	#proxy_pass http://$host$request_uri;
 	proxy_pass $scheme://$host$request_uri;
