修改了静态文件expire时间，增加了后端用apache来运行drupal的配置文件

--- a/nginx.conf
+++ b/nginx.conf
@@ -126,7 +126,7 @@ http {
     # igor said: This may be caused if "proxy_cache media" is included before proxy_cache_path.
 
     proxy_temp_path   /usr/local/nginx/proxy_temp;
-    proxy_cache_path  /usr/local/nginx/proxy_cache levels=1:2 keys_zone=cache:300m inactive=1d max_size=1g;
+    proxy_cache_path  /usr/local/nginx/proxy_cache levels=1:2 keys_zone=cache:50m inactive=1d max_size=100m;
 
     ## Include all vhosts. 
     include /usr/local/nginx/conf/sites-available/*/*.conf;
