--- a/sites-available/vhosts/others/vpn-38.com.conf
+++ b/sites-available/vhosts/others/vpn-38.com.conf
@@ -1,9 +1,9 @@
     server {
         listen 80;
-        server_name  www.vpn-38.com vpn-38.com;
+        server_name  www.vpn38.info vpn38.info;
 	### redirect www to nowww with client code 301 ###
-        if ($host = 'vpn-38.com' ) {
-         rewrite  ^/(.*)$  http://www.vpn-38.com/$1  permanent;
+        if ($host = 'vpn38.info' ) {
+         rewrite  ^/(.*)$  http://www.vpn38.info/$1  permanent;
         }
         root  /var/www/vpn38_index;
         index index.html index.php;
