--- a/sites-available/d7apache.conf
+++ b/sites-available/d7apache.conf
@@ -41,7 +41,20 @@ location ~* ^.+(\.(?:htaccess|txt|engine|inc|info|install|module|profile|po|sh|.
 ## https://drupal.org/node/371374.
 location ~* files/styles {
     access_log off;            
-    expires 300d;
+    expires 30d;
+    try_files $uri @drupal;
+}
+
+## 尝试一下对于files目录下的公开文件，根本不给用户cookie
+## 这样方便让nginx或varnish直接缓存这些文件
+location ~* files/ {
+    proxy_pass_header off;
+    proxy_hide_header Set-Cookie;
+    proxy_ignore_headers Set-Cookie;
+    proxy_cache cache;
+    proxy_cache_key $host$uri#is_args$args;
+    access_log off;            
+    expires 30d;
     try_files $uri @drupal;
 }
 
@@ -74,12 +87,17 @@ location = /favicon.ico {
 ## All static files will be served directly.
 location ~* ^.+\.(?:css|js|jpg|jpeg|gif|ico|png|html|xml)$ {
     access_log        off;
-    expires           300d;
+    expires           30d;
+    proxy_pass_header off;
+    proxy_hide_header Set-Cookie;
+    proxy_ignore_headers Set-Cookie;
+    proxy_cache cache;
+    proxy_cache_key $host$uri#is_args$args;
 }
 
 ## Keep a tab on the "big" static files.
 location ~* ^.+\.(?:m4a|mp3|mp4|mov|ogg|flv|pdf|ppt[x]*)$ {
-    expires 300d;
+    expires 30d;
 }
 
 ## This implements all Drupal handling. No need for regex magick when
@@ -92,4 +110,4 @@ location @drupal {
 ## This uses drush for updating the site and running cron.
 #include sites-available/drupal_boost_drush.conf; 
 ## This uses the regular web interface for updates and running cron.
-include sites-available/drupal_boost.conf; 
+include sites-available/apache.drupal.boost.conf; 
