--- a/sites-available/d7prod.conf
+++ b/sites-available/d7prod.conf
@@ -48,11 +48,11 @@ location ~* files/styles {
 ## 尝试一下对于files目录下的公开文件，根本不给用户cookie
 ## 这样方便让nginx或varnish直接缓存这些文件
 location ~* files/ {
-    #proxy_pass_header off;
-    #proxy_hide_header Set-Cookie;
-    #proxy_ignore_headers Set-Cookie;
-    #proxy_cache cache;
-    #proxy_cache_key $host$uri#is_args$args;
+    proxy_pass_header off;
+    proxy_hide_header Set-Cookie;
+    proxy_ignore_headers Set-Cookie;
+    proxy_cache cache;
+    proxy_cache_key $host$uri#is_args$args;
     access_log off;            
     expires 30d;
     try_files $uri @drupal;
@@ -110,4 +110,4 @@ location @drupal {
 ## This uses drush for updating the site and running cron.
 #include sites-available/drupal_boost_drush.conf; 
 ## This uses the regular web interface for updates and running cron.
-include sites-available/drupal_boost.conf; 
+#include sites-available/drupal_boost.conf; 
