在drupal_boost.conf和drupal_boost_drush.conf中增加了对 /authoriz.php 的location
因为我现在是在nginx中默认不允许执行任何 .php，如果请求，会报错说404 not found。除非我的配置
文件中明确的指定了允许运行哪些php。比如

	location = /authorize.php {
	  proxy_pass http://apache;
		}

这样安全。

如果允许执行authorize.php会出现：

1、drupal后台的升级模块功能无法使用。运行到authorize.php就中断了
2、即使把files目录权限设为777，还是无法通过feeds模块导入图片。因为到了authorize.php这步就中断了。

--- a/sites-available/drupal_boost.conf
+++ b/sites-available/drupal_boost.conf
@@ -121,8 +121,30 @@ location = /update.php {
     #proxy_pass http://phpapache;
     error_page 403 =404;
     #deny all;
-    
+}
 
+location = /authorize.php {
+        
+    # 404 当我们通过feeds导数据的时候，在导入图片的时候，
+    # 需要执行authorize.php，因此这里必须明确声明让这个php能被执行
+    # 否则会出现，不管你files目录给多大权限（777），图片都无法导入成功
+    # 同样，也无法使用drupal后台自带的自动更新模块功能
+
+    # 注释掉auth_basic 否则运行install.php出现500 internal error
+    #auth_basic "Restricted Access"; # auth realm                          
+    #auth_basic_user_file passwd; # htpasswd file
+    # 只允许社内ip地址访问
+    #allow 192.168.12.199;
+    #allow 192.168.12.89;
+    #allow 192.168.12.88;
+    #allow 127.0.0.1;
+    # 给php处理p
+    fastcgi_pass phpcgi;
+    # To use Apache for serving PHP uncomment the line bellow and
+    # comment out the above.
+    #proxy_pass http://phpapache;
+    error_page 403 =404;
+    #deny all;
 }
 
 
