--- a/sites-available/drupal_boost_drush.conf
+++ b/sites-available/drupal_boost_drush.conf
@@ -74,7 +74,17 @@ location = /boost_stats.php {
     #proxy_pass http://phpapache;
 }
 
+location = /authorize.php {
+    # 404 当我们通过feeds导数据的时候，在导入图片的时候，
+    # 需要执行authorize.php，因此这里必须明确声明让这个php能被执行
+    # 否则会出现，不管你files目录给多大权限（777），图片都无法导入成功
+    # 同样，也无法使用drupal后台自带的自动更新模块功能
+    fastcgi_pass phpcgi;
+    # To use Apache for serving PHP uncomment the line bellow and
+    # comment out the above.
+    #proxy_pass http://phpapache;
 ## Any other attempt to access PHP files returns a 404.
+}
 location ~* ^.+\.php$ {
     return 404; 
 }
