重新整理了vhosts的目录结构

--- a/sites-available/vhosts/ALL.D7.SITES.conf
+++ b/sites-available/vhosts/ALL.D7.SITES.conf
@@ -17,8 +17,8 @@ server {
     #limit_conn arbeit 16;
 
     ## Access and error logs.
-    #access_log  /var/log/nginx/example.com_access.log;
-    error_log   /var/log/nginx/nginx_error.log;
+    access_log  logs/access.log;
+    error_log   logs/error.log;
 
     ## Include the blacklist.conf file.
     #include sites-available/blacklist.conf;
