--- a/sites-available/vhosts/test.2u4u.com.cn.conf
+++ b/sites-available/vhosts/test.2u4u.com.cn.conf
@@ -14,9 +14,9 @@
 	# 参考： http://stackoverflow.com/questions/561946/how-do-i-prevent-a-gateway-timeout-with-nginx
 	# 参考这个篇中文的： http://blog.zhysoft.cn/tag/nginx/
  	
-	proxy_connect_timeout 600s;
-	proxy_send_timeout 600s;
-	proxy_read_timeout 600s; 
+	#proxy_connect_timeout 600s;
+	#proxy_send_timeout 600s;
+	#proxy_read_timeout 600s; 
 
 	# 根据这篇文章，php-cgi的线程不够，也会出现504 gateway timeout
 	# 因此相应加大
@@ -27,7 +27,7 @@
 	#fastcgi_read_timeout 300s;
 
         location online/ {
-         #autoindex on;
+         autoindex on;
 	 #limit_conn gullag 1;
 	 #limit_req  zone=qincheng burst=1;
 	 proxy_pass  http://apache;
