--- a/sites-available/d7apache.conf
+++ b/sites-available/d7apache.conf
@@ -48,11 +48,6 @@ location ~* files/styles {
 ## 尝试一下对于files目录下的公开文件，根本不给用户cookie
 ## 这样方便让nginx或varnish直接缓存这些文件
 location ~* files/ {
-    proxy_pass_header off;
-    proxy_hide_header Set-Cookie;
-    proxy_ignore_headers Set-Cookie;
-    proxy_cache cache;
-    proxy_cache_key $host$uri#is_args$args;
     access_log off;            
     expires 30d;
     try_files $uri @drupal;
@@ -103,7 +98,10 @@ location ~* ^.+\.(?:m4a|mp3|mp4|mov|ogg|flv|pdf|ppt[x]*)$ {
 ## This implements all Drupal handling. No need for regex magick when
 ## rewriting. D7 handles that.
 location @drupal {
-    rewrite ^ /index.php last;
+    #rewrite ^ /index.php last;
+    # 如果后端使用apache，必须用这种drupal 6的方式传题url
+    # 否则apache无法识别，无法使用简洁链接
+    rewrite ^/(.*)$ /index.php?q=$1 last;
 }
 
 ## Include the boost configuration.
