近期小修改

--- a/sites-available/vhosts/ALL.D7.SITES.conf
+++ b/sites-available/vhosts/ALL.D7.SITES.conf
@@ -17,7 +17,7 @@ server {
     #limit_conn arbeit 16;
 
     ## Access and error logs.
-    access_log  logs/access.log;
+    #access_log  logs/access.log;
     error_log   logs/error.log;
 
     ## Include the blacklist.conf file.
@@ -35,9 +35,16 @@ server {
     #include sites-available/drupal.conf;
 
     ## For D7. Use this instead.
-    #include sites-available/drupal7.conf;
-    include sites-available/d7apache.conf;
+    include sites-available/drupal7.conf;
+    #include sites-available/d7apache.conf;
+    #include sites-available/d7wzsy.conf;
     
+
+    proxy_connect_timeout 600s;
+    proxy_send_timeout 600s;
+    proxy_read_timeout 600s; 
+
+
     ## For upload progress to work. From the README of the
     ## filefield_nginx_progress module.
     #location ~ (.*)/x-progress-id:(\w*) {
