--- a/sites-available/vhosts/localhost.conf
+++ b/sites-available/vhosts/localhost.conf
@@ -36,9 +36,9 @@
 
 	location = /php.info/phpapacheinfo.php {
 	  #index index.php
-          proxy_pass       http://apache;
-          proxy_set_header  X-Real-IP  $remote_addr;
-          proxy_set_header Host $http_host;
+          proxy_pass   http://apache;
+          #proxy_set_header  X-Real-IP  $remote_addr;
+          #proxy_set_header Host $http_host;
 	}
 	location = /php.info/phpcgiinfo.php {
           #proxy_set_header  X-Real-IP  $remote_addr;
