减小proxy tiemout 时间

--- a/upstream_phpcgi.conf
+++ b/upstream_phpcgi.conf
@@ -4,5 +4,6 @@
 
 ## Add as many servers as needed. Cf. http://wiki.nginx.org/HttpUpstreamModule.
 upstream phpcgi {
-    server 127.0.0.1:9000;
+    server 127.0.0.1:9000	; 
+    #server 127.0.0.48:9000;
 }
