dushu.2u4u是ipad图书查字典用的网站，不能停用

--- a/sites-available/vhosts/dushu.2u4u.com.cn.conf
+++ b/sites-available/vhosts/dushu.2u4u.com.cn.conf
@@ -1,8 +1,9 @@
    server {
         listen       80;
+	# 这个站点是给ipad版本的图书查字典用的。不能停用。不要修改
         server_name  dushu.2u4u.com.cn;
         #access_log  logs/host.access.log  main;
-        root   /var/www/;
+        root   /var/www/xieq/;
         index  index.php index.html index.htm;
 	#autoindex on;
         location / {
