尝试用xzsy的php fpm处理php，成功

--- a/sites-available/vhosts/localhost.conf
+++ b/sites-available/vhosts/localhost.conf
@@ -2,7 +2,8 @@
         listen       80 default;
         server_name  129.0.0.223;
         #charset koi8-r;
-        #access_log  logs/host.access.log  main;
+        #access_log  logs/access.log;
+	#error_log   logs/error.log;
         root   /var/www;
         index  index.html index.htm;
 	autoindex  on;
@@ -34,6 +35,7 @@
             deny  all;
         }
 
+
 	location = /php.info/phpapacheinfo.php {
 	  #index index.php
           proxy_pass   http://apache;
@@ -43,8 +45,10 @@
 	location = /php.info/phpcgiinfo.php {
           #proxy_set_header  X-Real-IP  $remote_addr;
           #proxy_set_header Host $http_host;
+ 	  #proxy_pass http://129.0.0.48;
           #fastcgi_index index.php;
 	  fastcgi_pass  127.0.0.1:9000; 
+	  #fastcgi_pass  129.0.0.48:9000;
           fastcgi_index index.php;
           fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
           include       fastcgi_params;
