server name中将 .fltrp 改为 *.fltrp；原因参加详细commit
.domina是一个特殊的表达，参见wiki
    # 这里fltrp用了 *.fltrp 是因为我需要把 fltrp.com永久重新定向到www.fltrp.com
    # 如果用 .fltrp 这个表达就不起作用

--- a/sites-available/vhosts/ALL.D7.SITES.conf
+++ b/sites-available/vhosts/ALL.D7.SITES.conf
@@ -6,7 +6,10 @@
 server {
     listen 80;
     # wildcard in server name. see: http://wiki.nginx.org/HttpCoreModule#server_name
-    server_name .2u4u.com.cn v.chinadebate.org .fltrp.com;
+    # .domina是一个特殊的表达，参见wiki
+    # 这里fltrp用了 *.fltrp 是因为我需要把 fltrp.com永久重新定向到www.fltrp.com
+    # 如果用 .fltrp 这个表达就不起作用
+    server_name .2u4u.com.cn v.chinadebate.org *.fltrp.com .ncehome.com;
     # http://nginx.org/en/docs/http/server_names.html
     #The names are tested in the following order:
 	#exact names;
