一些尝试，企图用另一台机器和本机一齐处理php，但未成功。

--- a/upstream_phpapache.conf
+++ b/upstream_phpapache.conf
@@ -5,4 +5,5 @@
 ## Add as many servers as needed. Cf. http://wiki.nginx.org/HttpUpstreamModule.
 upstream apache {
     server 127.0.0.1:8080;
+    #server 129.0.0.48;
 }
