--- a/upstream_phpwzsy.conf
+++ b/upstream_phpwzsy.conf
@@ -3,10 +3,7 @@
 ### Upstream configuration for PHP FastCGI.
 
 ## Add as many servers as needed. Cf. http://wiki.nginx.org/HttpUpstreamModule.
-upstream phpcgi {
-
-## 参考： http://wiki.nginx.org/HttpUpstreamModule#ip_hash
-    #ip_hash;
-    server 127.0.0.1:9000; 
-    #server 129.0.0.48:9000;
+upstream wzsy {
+    #server 127.0.0.1:9000; 
+    server 129.0.0.48:9000;
 }
