--- a/nginx.conf
+++ b/nginx.conf
@@ -111,6 +111,8 @@ http {
 
     ## Include the upstream servers for PHP FastCGI handling config.
     include upstream_phpcgi.conf;
+    ## 404 temp
+    include upstream_phpwzsy.conf;
 
     ## Include the upstream servers for Apache handling the PHP
     ## processes. In this case Nginx functions as a reverse proxy.
