增加一些location到drupal默认的nginx规则中，主要是把一些locaiton重写到另一个域名
暂时不使用wzsy处理php，以为需要同步两边的文件。我还没有搞定如何只让另一台机器处理php而不许要在那台机器上也又一套程序和文件代码。

--- a/sites-available/vhosts/d7.use.wzsy.phpfpm.conf
+++ b/sites-available/vhosts/d7.use.wzsy.phpfpm.conf
@@ -29,9 +29,9 @@ server {
     #include sites-available/drupal.conf;
 
     ## For D7. Use this instead.
-    #include sites-available/drupal7.conf;
+    include sites-available/drupal7.conf;
     #include sites-available/d7apache.conf;
-    include sites-available/d7wzsy.conf;
+    #include sites-available/d7wzsy.conf;
     
 
     #proxy_connect_timeout 600s;
@@ -49,5 +49,21 @@ server {
         #report_uploads uploads;
     #}
     
-
+    # 在这里我重新定向 
+    # 参考： http://wiki.nginx.org/Pitfalls
+    location ^~ /cover {
+        rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
+        } 
+    location ^~ /bookext {
+        rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
+        } 
+    location ^~ /bookimages {
+        rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
+        } 
+    location ^~ /data {
+        rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
+        } 
+    location ^~ /newspic {
+        rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
+        } 
 } # HTTP server
