--- a/sites-available/vhosts/d7.use.wzsy.phpfpm.conf
+++ b/sites-available/vhosts/d7.use.wzsy.phpfpm.conf
@@ -51,13 +51,10 @@ server {
     
     # 在这里我重新定向 
     # 参考： http://wiki.nginx.org/Pitfalls
-    location ^~ /cover {
-        rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
-        } 
     location ^~ /bookext {
         rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
         } 
-    location ^~ /bookimages {
+    location ^~ /download {
         rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
         } 
     location ^~ /data {
