--- a/sites-available/vhosts/www.fltrp.com.conf
+++ b/sites-available/vhosts/www.fltrp.com.conf
@@ -32,12 +32,6 @@ server {
     include sites-available/drupal7.conf;
     #include sites-available/d7apache.conf;
     #include sites-available/d7wzsy.conf;
-    
-
-    proxy_connect_timeout 600s;
-    proxy_send_timeout 600s;
-    proxy_read_timeout 600s; 
-
 
     ## For upload progress to work. From the README of the
     ## filefield_nginx_progress module.
@@ -53,6 +47,15 @@ server {
     # 参考： http://wiki.nginx.org/Pitfalls
     location ^~ /download {
 	rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
-	}	
+	}
+    location ^~ /bookext {
+        rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
+        } 
+    location ^~ /data {
+        rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
+        } 
+    location ^~ /newspic {
+        rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
+        } 
 
 } # HTTP server
