301重定向综语核心教材站点，他们批量修改了域名

--- a/sites-available/vhosts/301.redirect.conf
+++ b/sites-available/vhosts/301.redirect.conf
@@ -1,4 +1,4 @@
-server {
+server  {
         listen       80;
         server_name  fltrp.com;
         # proper way to do domain redirect: http://wiki.nginx.org/Pitfalls#Server_Name
@@ -11,3 +11,49 @@ server {
         # proper way to do domain redirect: http://wiki.nginx.org/Pitfalls#Server_Name
         rewrite ^ $scheme://www.fltrp.com$request_uri permanent;
         }
+server {
+        listen       80;
+        server_name  ko.mlp.fltrp.com;
+        # proper way to do domain redirect: http://wiki.nginx.org/Pitfalls#Server_Name
+        rewrite ^ $scheme://korean.fltrp.com$request_uri permanent;
+        }
+
+server {
+        listen       80;
+        server_name  es.mlp.fltrp.com;
+        # proper way to do domain redirect: http://wiki.nginx.org/Pitfalls#Server_Name
+        rewrite ^ $scheme://spanish.fltrp.com$request_uri permanent;
+	}
+server {
+        listen       80;
+        server_name  jp.mlp.fltrp.com;
+        # proper way to do domain redirect: http://wiki.nginx.org/Pitfalls#Server_Name
+        rewrite ^ $scheme://japanese.fltrp.com$request_uri permanent;
+	}
+server {
+        listen       80;
+        server_name  ru.mlp.fltrp.com;
+        # proper way to do domain redirect: http://wiki.nginx.org/Pitfalls#Server_Name
+        rewrite ^ $scheme://russian.fltrp.com$request_uri permanent;
+	}
+server {
+        listen       80;
+        server_name  it.mlp.fltrp.com;
+        # proper way to do domain redirect: http://wiki.nginx.org/Pitfalls#Server_Name
+        rewrite ^ $scheme://italian.fltrp.com$request_uri permanent;
+	}
+server {
+        listen       80;
+        server_name  de.mlp.fltrp.com;
+        # proper way to do domain redirect: http://wiki.nginx.org/Pitfalls#Server_Name
+        rewrite ^ $scheme://german.fltrp.com$request_uri permanent;
+	}
+server {
+        listen       80;
+        server_name  fr.mlp.fltrp.com;
+        # proper way to do domain redirect: http://wiki.nginx.org/Pitfalls#Server_Name
+        rewrite ^ $scheme://french.fltrp.com$request_uri permanent;
+        }
+
+
+
