在passport站点查看用户统计信息需要认证

--- a/sites-available/vhosts/passport.2u4u.conf
+++ b/sites-available/vhosts/passport.2u4u.conf
@@ -10,7 +10,11 @@ server 	{
 	#allow	192.168.12.0/24;
 	#deny	all;
 	}
-	
-	access_log logs/proxy.log;
+	#access_log logs/proxy.log;
 
+	#location ^~ /uums {
+	#auth_basic      "Tell me who you are";
+        #auth_basic_user_file    passwd/htpasswd;
+	#proxy_pass $scheme://129.0.0.48:8080$request_uri;
+	#}
 }
