--- a/sites-available/vhosts/ALL.D7.SITES.conf
+++ b/sites-available/vhosts/ALL.D7.SITES.conf
@@ -9,7 +9,7 @@ server {
     # .domina是一个特殊的表达，参见wiki
     # 这里fltrp用了 *.fltrp 是因为我需要把 fltrp.com永久重新定向到www.fltrp.com
     # 如果用 .fltrp 这个表达就不起作用
-    server_name .2u4u.com.cn v.chinadebate.org .ncehome.com;
+    server_name *.fltrp.com .2u4u.com.cn v.chinadebate.org .ncehome.com;
     # http://nginx.org/en/docs/http/server_names.html
     #The names are tested in the following order:
 	#exact names;
@@ -57,5 +57,6 @@ server {
     #location ^~ /progress {
         #report_uploads uploads;
     #}
+
     
 } # HTTP server
