/data目录不重定向否则zl需要重写其脚本程序去跟踪301 redirect

--- a/sites-available/vhosts/www.fltrp.com.conf
+++ b/sites-available/vhosts/www.fltrp.com.conf
@@ -51,9 +51,9 @@ server {
     location ^~ /bookext {
         rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
         } 
-    location ^~ /data {
-        rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
-        } 
+    #location ^~ /data {
+        #rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
+        #} 
     location ^~ /newspic {
         rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
         } 
