增加search和baoming.writing-contest站点；其它小修改

--- a/sites-available/vhosts/www.fltrp.com.conf
+++ b/sites-available/vhosts/www.fltrp.com.conf
@@ -48,6 +48,9 @@ server {
     location ^~ /download {
 	rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
 	}
+    location ^~ /hanyu {
+	rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
+	}
     location ^~ /bookext {
         rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
         } 
@@ -57,5 +60,7 @@ server {
     location ^~ /newspic {
         rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
         } 
-
+    location ^~ /bookimages {
+        rewrite ^ $scheme://old.fltrp.com$request_uri permanent;
+        } 
 } # HTTP server
