--- a/sites-available/vhosts/localhost.conf
+++ b/sites-available/vhosts/localhost.conf
@@ -28,7 +28,11 @@
 	location /phpmyadmin {
 	auth_basic	"Tell me who you are";
 	auth_basic_user_file	passwd/htpasswd;
-        proxy_pass   http://apache;
+        #proxy_pass   http://apache;
+          fastcgi_pass 127.0.0.1:9000;  ### php-fpm listening on port 9000
+          fastcgi_index index.php;
+          fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+          include       fastcgi_params;
 	}
 
         location ~ /\.ht {
