--- a/sites-available/vhosts/301.redirect.conf
+++ b/sites-available/vhosts/301.redirect.conf
@@ -56,4 +56,10 @@ server {
         }
 
 
+server {
+        listen       80;
+        server_name  nchome.com;
+        # proper way to do domain redirect: http://wiki.nginx.org/Pitfalls#Server_Name
+        rewrite ^ $scheme://www.nchome.com$request_uri permanent;
+        }
 
