--- a/sites-available/vhosts/newjxq.conf
+++ b/sites-available/vhosts/newjxq.conf
@@ -1,9 +1,9 @@
   server {
         #limit_conn   gulag 10;
 	listen	      80;
-        server_name   book.jiaxiaoquan.com;
+        server_name   a.com;
 	#rewrite ^ $scheme://dl.2u4u.com.cn$request_uri permanent;
-        root         /var/www/book.jiaxiaoquan.com/;
+        root         /var/www/newjxq ;
         index        index.php index.html;
 
     ## Deny some crawlers
@@ -172,6 +172,7 @@
         default_type application/rss+xml;
         try_files /cache/normal/$host${uri}_.xml /cache/normal/$host${uri}_.html /cache/$host${uri}_.xml $uri @drupal;
     }
+
 
  location ~* /admin {
     #auth_basic "Restricted Area";
