--- a/sites-available/vhosts/others/mydrupal7.conf
+++ b/sites-available/vhosts/others/mydrupal7.conf
@@ -1,20 +1,19 @@
 # -*- mode: nginx; mode: flyspell-prog; mode: autopair; ispell-current-dictionary: american -*-
 ### Configuration for example.com.
 
-## Rewrite server block.
-server {
-    ## This is to avoid the spurious if for sub-domain name
-    ## rewriting. See http://wiki.nginx.org/Pitfalls#Server_Name.
-    server_name www.example.com;
-    rewrite ^ $scheme://example.com$request_uri? permanent;
-} # server domain rewrite.
-
 
 ## HTTP server.
 server {
+        listen       80;
+        #server_name  www.rijiben.org;
+        # proper way to do domain redirect: http://wiki.nginx.org/Pitfalls#Server_Name
+        rewrite ^ $scheme://rijiben.org$request_uri permanent;
+        }
+
+server {
     listen 80;
-    server_name pengyou.rijiben.org;
-    limit_conn arbeit 16;
+    server_name rijiben.org;
+    #limit_conn arbeit 16;
 
     ## Access and error logs.
     #access_log  /var/log/nginx/example.com_access.log;
@@ -28,15 +27,14 @@ server {
         #return 444;
     #}
 
-    root  /var/www/octopress/newpy.org/;
-    #index index.php index.html;
-    index index.html;
+    root  /var/www/pf7/;
+    index index.php index.html;
 
     ## Include all Drupal stuff.
     #include sites-available/drupal.conf;
 
     ## For D7. Use this instead.
-    #include sites-available/drupal7.conf;
+    include sites-available/drupal7.conf;
     
     ## For upload progress to work. From the README of the
     ## filefield_nginx_progress module.
