--- a/sites-available/vhosts/others/tongnian.conf
+++ b/sites-available/vhosts/others/tongnian.conf
@@ -21,30 +21,21 @@ server {
     #error_log   /var/log/nginx/example.com_error.log;
 
     ## Include the blacklist.conf file.
-    include sites-available/blacklist.conf;
+    #include sites-available/blacklist.conf;
 
     ## Disable all methods besides HEAD, GET and POST.
     if ($request_method !~ ^(GET|HEAD|POST)$ ) {
         return 444;
     }
 
-    root  /var/www/pf/;
-    index index.php index.html;
+    root  /var/www/octopress/tongnian;
+    index index.html;
 
-    ## Include all Drupal stuff.
-    include sites-available/drupal.conf;
-
-    ## For D7. Use this instead.
-    #include sites-available/drupal7.conf;
-    
-    ## For upload progress to work. From the README of the
-    ## filefield_nginx_progress module.
-    #location ~ (.*)/x-progress-id:(\w*) {
-        #rewrite ^(.*)/x-progress-id:(\w*)  $1?X-Progress-ID=$2;
-    #}
-
-    #location ^~ /progress {
-        #report_uploads uploads;
-    #}
+    location /thailand201204/ {
+      auth_basic           "closed site";
+      auth_basic_user_file passwd/htpasswd;
+    #  autoindex on;
+      try_files $uri $uri/index.html;
+    }
     
 } # HTTP server
