--- a/sites-available/vhosts/localhost.conf
+++ b/sites-available/vhosts/localhost.conf
@@ -21,6 +21,9 @@
         proxy_pass   http://apache;
         }	
 	
+	location /oa {
+        proxy_pass   http://apache;
+        }
 	location /zhangyiqun.net {
         proxy_pass   http://apache;
         }
@@ -46,6 +49,7 @@
           #proxy_set_header  X-Real-IP  $remote_addr;
           #proxy_set_header Host $http_host;
 	}
+
 	location = /php.info/phpcgiinfo.php {
           #proxy_set_header  X-Real-IP  $remote_addr;
           #proxy_set_header Host $http_host;
@@ -66,6 +70,7 @@
           #proxy_set_header  X-Real-IP  $remote_addr;
           #proxy_set_header Host $http_host;
 	}
+
 	location /xcachecgi/ {
 	  #alias /usr/share/xcache/admin/;
 	  #index index.php
@@ -77,5 +82,5 @@
           fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
           include       fastcgi_params;
 	}
+	
     }
-    
