--- a/fastcgi.conf
+++ b/fastcgi.conf
@@ -6,4 +6,6 @@ fastcgi_buffers 256 4k;
 fastcgi_intercept_errors on;
 ## allow 4 hrs - pass timeout responsibility to upstrea
 fastcgi_read_timeout 14400; 
+fastcgi_connect_timeout 14400;
+fastcgi_send_timeout 14400;
 fastcgi_index index.php;      
