--- a/sites-available/vhosts/ishare.flearning.cn.conf
+++ b/sites-available/vhosts/ishare.flearning.cn.conf
@@ -9,18 +9,20 @@ server {
 
     ## Access and error logs.
     #access_log  logs/access.log;
-    error_log   logs/error.log;
-
-
+    #error_log   logs/error.log;
     ## Disable all methods besides HEAD, GET and POST.
-    if ($request_method !~ ^(GET|HEAD|POST)$ ) {
-        return 444;
+    #if ($request_method !~ ^(GET|HEAD|POST)$ ) {
+        #return 444;
+    #}
+
+    #root  /var/www/ishare.flearning.cn/;
+    #index index.php index.html;
+
+    root  /var/www/ishare.flearning.cn;
+    index index.php index.html;
+  
+    location / {
+      proxy_pass http://apache;
     }
 
-    root  /var/www/ishare.flearning.cn/;
-    index index.php index.html;
-
-    ## For D7. Use this instead.
-    include sites-available/drupal7.conf;
-    
 } # HTTP server
