--- a/sites-available/vhosts/others/py.conf
+++ b/sites-available/vhosts/others/py.conf
@@ -5,8 +5,8 @@
 server {
     ## This is to avoid the spurious if for sub-domain name
     ## rewriting. See http://wiki.nginx.org/Pitfalls#Server_Name.
-    server_name www.example.com;
-    rewrite ^ $scheme://example.com$request_uri? permanent;
+    server_name www.rijiben.org;
+    rewrite ^ $scheme://rijiben.org$request_uri? permanent;
 } # server domain rewrite.
 
 
@@ -16,36 +16,31 @@ server {
     server_name pengyou.rijiben.org;
     limit_conn arbeit 16;
 
-    ## Access and error logs.
-    #access_log  /var/log/nginx/example.com_access.log;
-    #error_log   /var/log/nginx/example.com_error.log;
-
-    ## Include the blacklist.conf file.
-    include sites-available/blacklist.conf;
-
     ## Disable all methods besides HEAD, GET and POST.
-    #if ($request_method !~ ^(GET|HEAD|POST)$ ) {
-        #return 444;
-    #}
+    if ($request_method !~ ^(GET|HEAD|POST)$ ) {
+        return 444;
+    }
 
     root  /var/www/octopress/newpy.org/;
     #index index.php index.html;
     index index.html;
 
-    ## Include all Drupal stuff.
-    #include sites-available/drupal.conf;
+} # HTTP server
 
-    ## For D7. Use this instead.
-    #include sites-available/drupal7.conf;
-    
-    ## For upload progress to work. From the README of the
-    ## filefield_nginx_progress module.
-    #location ~ (.*)/x-progress-id:(\w*) {
-        #rewrite ^(.*)/x-progress-id:(\w*)  $1?X-Progress-ID=$2;
-    #}
 
-    #location ^~ /progress {
-        #report_uploads uploads;
-    #}
-    
+
+server {
+    listen 80;
+    server_name rijiben.org;
+    limit_conn arbeit 16;
+
+    ## Disable all methods besides HEAD, GET and POST.
+    if ($request_method !~ ^(GET|HEAD|POST)$ ) {
+        return 444;
+    }
+
+    root  /var/www/octopress/rjb.org/;
+    #index index.php index.html;
+    index index.html;
+
 } # HTTP server
