--- a/sites-available/vhosts/fltrp2012.com.conf
+++ b/sites-available/vhosts/fltrp2012.com.conf
@@ -2,7 +2,7 @@
 ## HTTP server.
 server {
     listen 80;
-    server_name fltrp2012.com
+    server_name fltrp2012.com;
 
     ## Access and error logs.
     #access_log  logs/access.log;
@@ -19,8 +19,6 @@ server {
 
     ## For D7. Use this instead.
     include sites-available/drupal7.conf;
-
-
 
 
 } # HTTP server
