--- a/sites-available/vhosts/others/py.conf
+++ b/sites-available/vhosts/others/py.conf
@@ -24,6 +24,8 @@ server {
     root  /var/www/octopress/newpy.org/;
     #index index.php index.html;
     index index.html;
+    autoindex on;
+    charset utf-8;
 
 } # HTTP server
 
