--- a/sites-available/vhosts/viaton1.fltrp.com.conf
+++ b/sites-available/vhosts/viaton1.fltrp.com.conf
@@ -2,18 +2,18 @@
 ## HTTP server.
 server {
     listen 80;
-    server_name viaton.fltrp.com;
+    server_name viaton1.fltrp.com;
 
     ## Access and error logs.
     #access_log  logs/access.log;
-    error_log   logs/error.log;
+    #error_log   logs/error.log;
 
     ## Disable all methods besides HEAD, GET and POST.
     if ($request_method !~ ^(GET|HEAD|POST)$ ) {
         return 444;
     }
 
-    root  /var/www/viaton.fltrp.com/;
+    root  /var/www/viaton1/;
     index index.php index.html;
 
 
