--- a/sites-available/vhosts/www.ncehome.com.conf
+++ b/sites-available/vhosts/www.ncehome.com.conf
@@ -5,11 +5,11 @@
 ## HTTP server.
 server {
     listen 80;
-    server_name www.ncehome.com
+    server_name www.ncehome.com;
 
     ## Access and error logs.
     #access_log  logs/access.log;
-    error_log   logs/error.log;
+    #error_log   logs/error.log;
 
     ## Disable all methods besides HEAD, GET and POST.
     if ($request_method !~ ^(GET|HEAD|POST)$ ) {
