--- a/sites-available/vhosts/000-example.conf
+++ b/sites-available/vhosts/000-example.conf
@@ -2,7 +2,7 @@
 ## HTTP server.
 server {
     listen 80;
-    server_name fltrp2012.com
+    server_name examplel.com;
 
     ## Access and error logs.
     #access_log  logs/access.log;
@@ -13,7 +13,7 @@ server {
         return 444;
     }
 
-    root  /var/www/fltrp2012/;
+    root  /var/www/someroot/;
     index index.php index.html;
 
 
