--- a/sites-available/vhosts/ishare.flearning.cn.conf
+++ b/sites-available/vhosts/ishare.flearning.cn.conf
@@ -1,28 +1,11 @@
 # -*- mode: nginx; mode: flyspell-prog; mode: autopair; ispell-current-dictionary: american -*-
-### Configuration for example.com.
-
-
 ## HTTP server.
 server {
-    listen 80;
-    server_name ishare.flearning.cn
-
-    ## Access and error logs.
-    #access_log  logs/access.log;
-    #error_log   logs/error.log;
-    ## Disable all methods besides HEAD, GET and POST.
-    #if ($request_method !~ ^(GET|HEAD|POST)$ ) {
-        #return 444;
-    #}
-
-    #root  /var/www/ishare.flearning.cn/;
-    #index index.php index.html;
-
-    root  /var/www/ishare.flearning.cn;
-    index index.php index.html;
-  
-    location / {
-      proxy_pass http://apache;
-    }
-
+  listen 80;
+  server_name ishare.flearning.cn;
+  root /var/www/ishare.flearning.cn;
+  index index.php index.html;
+  location / {
+    proxy_pass http://apache;
+  }
 } # HTTP server
