--- a/sites-available/vhosts/zentao.fltrp.com.conf
+++ b/sites-available/vhosts/zentao.fltrp.com.conf
@@ -7,15 +7,13 @@ server {
     if ($request_method !~ ^(GET|HEAD|POST)$ ) {
         return 444;
     }
-    root  /var/www/zentaopms/;
+    root  /var/www/zentaopms/www;
     index index.php index.html;
+    autoindex on;
     location = / {
-         rewrite ^ /www/;
+         #rewrite ^ /www/;
     }
     location / {
         proxy_pass http://apache;
-    }
-    location ~* .+\.(png|jpg|gif|jpeg|css|js|ico|flv|swf|mp3)$ {
-        expires max;
     }
 } # HTTP server
