remove phpwzsy from main conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -111,7 +111,7 @@ http {
     ## Include the upstream servers for PHP FastCGI handling config.
     include upstream_phpcgi.conf;
     ## 404 temp
-    include upstream_phpwzsy.conf;
+    #include upstream_phpwzsy.conf;
 
     ## Include the upstream servers for Apache handling the PHP
     ## processes. In this case Nginx functions as a reverse proxy.
